<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infos"
    >

    <include
        android:id="@+id/head"
        layout="@layout/header"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/infos_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_infos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />


    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="470dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infos_title"
        app:layout_constraintVertical_bias="0.181">
        <!-- nom -->
        <LinearLayout
            android:id="@+id/bloc_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/inom"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />

            <TextView
                android:id="@+id/nom"
                android:layout_width="360dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- telephone -->
        <LinearLayout
            android:id="@+id/bloc_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_nom">

            <TextView
                android:id="@+id/itel"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/tel"
                android:layout_width="360dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- datenaiss -->
        <LinearLayout
            android:id="@+id/bloc_naiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_tel">

            <TextView
                android:id="@+id/ibirth"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <!-- origine -->
        <LinearLayout
            android:id="@+id/bloc_origine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_naiss">

            <TextView
                android:id="@+id/iorigine"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/origin" />

            <TextView
                android:id="@+id/origine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- filière -->
        <LinearLayout
            android:id="@+id/bloc_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_origine">

            <TextView
                android:id="@+id/ichoix"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/department" />

            <TextView
                android:id="@+id/choix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- button -->
        <LinearLayout
            android:id="@+id/bloc_valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_choix">

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/send" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/back"
                style="?android:attr/buttonBarButtonStyle"
                />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>