<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demande_infos"
    >

    <include
        android:id="@+id/head"
        layout="@layout/header"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/demande_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_demande"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="351dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/demande_title"
        app:layout_constraintVertical_bias="0.137">

        <!-- prenom -->
        <LinearLayout
            android:id="@+id/bloc_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/demande_title">

            <TextView
                android:id="@+id/iprenom"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <!-- nom -->
        <LinearLayout
            android:id="@+id/bloc_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_prenom">

            <TextView
                android:id="@+id/inom"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />

            <EditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <!-- telephone -->
        <LinearLayout
            android:id="@+id/bloc_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_nom">

            <TextView
                android:id="@+id/itel"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <!-- datenaiss -->
        <LinearLayout
            android:id="@+id/bloc_naiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_tel">

            <TextView
                android:id="@+id/ibirth"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />

            <EditText
                android:id="@+id/birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date" />


        </LinearLayout>

        <!-- origine -->
        <LinearLayout
            android:id="@+id/bloc_origine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_naiss">

            <TextView
                android:id="@+id/iorigine"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/origin" />

            <Spinner
                android:id="@+id/origine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/pays">
            </Spinner>

        </LinearLayout>

        <!-- filière -->
        <LinearLayout
            android:id="@+id/bloc_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_origine">

            <TextView
                android:id="@+id/ichoix"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/department" />

            <Spinner
                android:id="@+id/choix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/filiere" />

        </LinearLayout>

        <!-- button -->
        <LinearLayout
            android:id="@+id/bloc_valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloc_choix">

            <Button
                android:id="@+id/send"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cancel" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>